--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -8,3 +8,7 @@
 .contact-bg{
       background-image: url('../../public/bg.jpg.jpg'); 
 }
+
+.userLogin-bg{
+      background-image: url('../../public/8868.jpg');
+}
